prevented overflow on right side of page, and fixed biography image size to prevent it from stretching

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -2,12 +2,9 @@
 @use '../styles/partials/mixins' as *;
 @use '../styles/partials/fonts' as *;
 
-// * {
-//     border: 1px red dotted;
-// }
-
 body {
     margin: 0rem;
+    overflow-x: hidden;
 }
 
 .nav-bar {
@@ -200,7 +197,7 @@ body {
 
 .biography {
     padding-left: 16px;
-    padding-right: 28px;
+    padding-right: 16px;
     margin: 0px;
 
     &__title {
@@ -212,9 +209,8 @@ body {
 
     &__image {
         width: 100%;
-        height: 9.8125rem;
+        height: 30%;
         object-fit: cover;
-        max-width: 276px;      
         
         &--description {
             @include body-copy-mobile;
@@ -264,8 +260,6 @@ body {
         }
 
         &__image {
-            height: 19.1875rem;
-            max-width: 560px;
 
             &--description {
                 padding-top: 7px;
@@ -318,9 +312,7 @@ body {
         &__image {
             height: 28.375rem;
             padding: 0px 117px 10px 117px;
-            width: 77%;
-            max-width: 852px;
-
+            width: 79%;
 
             &--description {
                 padding-left: 117px;
@@ -604,9 +596,7 @@ body {
 
 // questions for openstudio
 
-// can do myself
-//hover isnt working for tablet
-//gitignore
+
 //on the mobile screen, biography in nav bar isnt boldened for some reason 
 
 // maybe
